--- a/src/assets/css/classic.less
+++ b/src/assets/css/classic.less
@@ -123,4 +123,68 @@ html, body {
       background-size: cover;
     }
   }
+  .cmmx-box{
+    .part{
+      width: 94%;
+      margin: 0 auto;
+      margin-bottom: 0.5rem;
+      background: #f2f2f2;
+      padding: 0.5rem;
+      border-radius: 0.3rem;
+      .img-box{
+        width: 3rem;
+        height: 3rem;
+        img{
+          width: 100%;
+          height: 100%;
+          border-radius: 0.3rem;
+        }
+      }
+      .msg-box{
+        position: relative;
+        .name{
+          font-weight: bold;
+          font-size: 0.8rem;
+          margin-bottom: 0.1rem;
+        }
+        .age{
+          color: #999;
+          font-size: 0.5rem;
+          margin-bottom: 0.4rem;
+        }
+        .intr{
+          color: #666;
+        font-size: 0.7rem;
+        }
+        .tag{
+          position: absolute;
+          right: 0;
+          top: 0;
+          color: #fff;
+          height: 1.4rem;
+          line-height: 1.4rem;
+          padding: 0 0.7rem;
+          border-radius: 0.7rem;
+        }
+        .c1{
+          background: -webkit-linear-gradient(left,#e112ed36, #e112edfa); /* Safari 5.1 - 6.0 */
+          background: -o-linear-gradient(left,#e112ed36, #e112edfa); /* Opera 11.1 - 12.0 */
+          background: -moz-linear-gradient(left,#e112ed36, #e112edfa); /* Firefox 3.6 - 15 */
+          background: linear-gradient(left,#e112ed36, #e112edfa); /* 标准的语法（必须放在最后） */
+        }
+        .c2{
+          background: -webkit-linear-gradient(left,#ff227245, #ff2272f5); /* Safari 5.1 - 6.0 */
+          background: -o-linear-gradient(left,#ff227245, #ff2272f5); /* Opera 11.1 - 12.0 */
+          background: -moz-linear-gradient(left,#ff227245, #ff2272f5); /* Firefox 3.6 - 15 */
+          background: linear-gradient(left,#ff227245, #ff2272f5); /* 标准的语法（必须放在最后） */
+        }
+        .c3{
+          background: -webkit-linear-gradient(left,#226fff2e, #226fffed); /* Safari 5.1 - 6.0 */
+          background: -o-linear-gradient(left,#226fff2e, #226fffed); /* Opera 11.1 - 12.0 */
+          background: -moz-linear-gradient(left,#226fff2e, #226fffed); /* Firefox 3.6 - 15 */
+          background: linear-gradient(left,#226fff2e, #226fffed); /* 标准的语法（必须放在最后） */
+        }
+      }
+    }
+  }
 }
